--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Abrnoc Application</string>
+    <string name="app_name">KeepitOn Application</string>
     <!-- bottom tabs -->
     <string name="home">Home</string>
     <string name="profile">Profile</string>
